<resources>
    <string name="app_name">Happy BankING</string>
    <string name="title_activity_main">ING Mobil - Test</string>
    <string name="global_alertHttpError">"İnternet bağlantın ile ilgili bir problem var. Kontrol eder misin?"</string>
    <string name="global_ok">"Tamam"</string>
    <string name="global_yes">"Evet"</string>
    <string name="global_alertTitle4">"Bilgine"</string>
    <string name="Global_PermissionFacebookNew">"Sana saygım sonsuz ama sen cihazının gizlilik ayarlarından ParaMara'nın Facebook hesabına erişimine izin vermediğin sürece işlemini yapamam :("</string>
    <string name="global_facebookSending">"Facebook Gönderimi"</string>
    <string name="global_alertBtn1">"Vazgeç"</string>
    <string name="global_warning">"Uyarı"</string>
    <string name="global_error">"Hata"</string>
    <string name="global_info">"Bilgilendirme"</string>
    <string name="global_currency">"TL"</string>
    <string name="global_callCenterPhone">"08502220600"</string>
    <string name="global_confirm">"Onaylıyorum"</string>
    <string name="global_cancel">"İptal"</string>
    <string name="global_welcome">"Hoş geldin"</string>
    <string name="global_alertTitle3">"Üzgünüz"</string>
    <string name="global_exit">"Kapat"</string>
    <string name="expiration_label">SKT:</string>
    <string name="cvv_label">CVV:</string>
    <string name="balance_label">Kullanılabilir Bakiye</string>
    <string name="my_cards_activity">Kartlarım</string>
    <string name="load_money">Para Yükle</string>
    <string name="load_money_by_barcode">Barkod Okutarak Para Yükle</string>
    <string name="transfer_money">Gelen Parayı Al</string>
    <string name="coming_money">"Gelen Para"</string>
    <string name="send_money">Para Gönder</string>
    <string name="set_limit">Limit Tanımla</string>
    <string name="load_money_to_my_ininal_card">"ininal Kart'a Para Yükle"</string>
    <string name="load_money_to_other_ininal_card">"Başka ininal Karta Yükle"</string>
    <string name="statement_date">Hesap Kesim Tarihi</string>
    <string name="spent_in_term">Dönemiçi Harcaman</string>
    <string name="ERROR_default">"Sorun sende değil bende."</string>
    <string name="dlgSuccessProcess_btnClose2">"Süper"</string>
    <string name="dlgSuccessProcess_btnClose1">"Kapat"</string>
    <string name="pgHelp_lblHeader">"Yardım"</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_content_type_json">application/json</string>
    <string name="title_activity_walk_through">WalkThroughActivity</string>
    <string name="action_settings">Settings</string>
    <string name="global_waiting">Lütfen Bekleyiniz.</string>
    <string name="dashboard_activity_title">@string/pgMyPage_lblINGWallet1</string>
    <string name="notification_activity_title">Notification</string>
    <string name="callWarning"> şubesini aramak istiyor musunuz?</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="search_hint">"Arama"</string>
    <string name="title_activity_card_application">@string/caTitleCardApplication</string>
    <string name="title_activity_card_application_detail">@string/caTitleCardApplication</string>
    <string name="credit_card">Kredi Kartı</string>
    <string name="debit_card">Nakit Kart</string>
    <string name="ininal_card">ininal</string>
    <string name="global_timeout_message">"Seni beklerken uykum geldi. Tekrar giriş yapar mısın?"</string>
    <string name="title_activity_facebook_share">Facebook</string>
    <string name="unica_activity_label">Kampanya</string>
    <string name="save">Kaydet</string>
    <string name="call_center">Çağrı Merkezi</string>
    <string name="save_transaction_enter_alias">Kayıt Adı Girin</string>
    <string name="pgWelcomeScreen_callCenter">"Müşteri İletişim Merkezini arıyoruz. Onaylıyor musun?"</string>
    <string name="pgWelcomeScreen_lbl1">"Hoş geldin"</string>
    <string name="pgWelcomeScreen_lbl2">"ininal Kart"</string>
    <string name="pgWelcomeScreen_lbl3">"Bildirimler"</string>
    <string name="pgWelcomeScreen_lbl4">"Sana Özel"</string>
    <string name="pgWelcomeScreen_lbl5">"İstediğin kişiye 7/24, anında para gönderebileceğin süper bir deneyime hazır mısın?"</string>
    <string name="pgWelcomeScreen_lbl6">"ininal ön ödemeli kart yaratarak ya da varolan kartını ekleyerek, indirimli alışverişin tadını çıkarabilirsin!"</string>
    <string name="pgWelcomeScreen_lbl7">"Kampanya tekliflerini, gelen paranı ve gelen paranın durumunu haber almak senin de hakkın!"</string>
    <string name="pgWelcomeScreen_lbl8">"Diğer ihtiyaç duyduğun her şey burada!"</string>
    <string name="pgWelcomeScreen_btnCreateAccount">"Hemen Başla"</string>
    <string name="pgCreateAccount_edtTCKNPlaceHolder">"TC Kimlik No"</string>
    <string name="pgCreateAccount_edtPinPlaceHolder">"Şifre"</string>
    <string name="pgCreateAccount_edtPinConfirmPlaceHolder">"Şifre (Tekrar)"</string>
    <string name="pgCreateAccount_errorTCKN">"Girdiğin bilgileri kontrol edip tekrar dene!"</string>
    <string name="pgCreateAccount_errorPhoneNumber">"Girdiğin bilgileri kontrol edip tekrar dene!"</string>
    <string name="pgCreateAccount_btnNext">"Devam"</string>
    <string name="pgCreateAccount_Label1">"ParaMara'yı sadece TCKN ve cep telefonunu girerek hemen kullanmaya başlayabilirsin."</string>
    <string name="pgCreateAccount_lbl1">"Lütfen TCKN ve cep telefonunu gir"</string>
    <string name="pgCreateAccount_Privacy">"Hesap cüzdanının, hesabın varlığını hukuken ispatlayıcı bir belge niteliğinde olduğunu ve şubeden temin edilebileceğimi biliyorum, hesap açılış işlemlerine devam etmek istiyorum.\n"</string>
    <string name="pgCreateAccount_privacyText">"Sözleşme Metni"</string>
    <string name="pgCreateAccount_titleHeader">Aktivasyon</string>
    <string name="pgCreatePinForAccount_dontMatchPINs">"Maalesef şifreler birbirini tutmuyor. Tekrar dener misin?"</string>
    <string name="pgCreatePinForAccount_lbl1">"Her girişte kullanacağın 4 haneli şifreni belirle!"</string>
    <string name="pgCreatePinForAccount_lbl2">"Şifrenin ardışık olmaması, aynı rakamlardan oluşmaması ve 19 ile başlamaması gerekiyor."</string>
    <string name="pgCreatePinForAccount_error_consecutiveNumber">"Şifren ardışık olmasın."</string>
    <string name="pgCreatePinForAccount_error_allCharsAreSame">"Tüm karakterleri aynı giremezsin."</string>
    <string name="pgCreatePinForAccount_error_forbiddenPIN">"Bu şifre uygun değil."</string>
    <string name="pgCreatePinForAccount_error_startsWith19">"Şifren 19'la başlamasın."</string>
    <string name="title_activity_mobile_pin">"Cep Şifre"</string>
    <string name="pgMobilePinActivityBtnContinue">"Devam"</string>
    <string name="pgMobilePinActivityBtnBack">"Yukarı"</string>
    <string name="pgPrivacy_lblHeader">"Kullanım Şartları"</string>
    <string name="pgPrivacy_btnNotAccept">"Sonra\nKonuşalım"</string>
    <string name="pgPrivacy_btnSendAgreement">"Sözleşme\nGönder"</string>
    <string name="pgPrivacy_btnAccept">"Kabul\nEdiyorum"</string>
    <string name="pgSendAgreement_btnAccept">"Gönder"</string>
    <string name="pgSendAgreement_btnCancel">"Vazgeçtim"</string>
    <string name="pgSendAgreement_lblInfo">"Lütfen Kullanım Şartlarını göndermek istediğin e-posta adresini gir."</string>
    <string name="pgSendAgreement_message">"Kullanım Şartları birazdan mail kutunda olur."</string>
    <string name="pgLogin_cancelActivation">"Aktivasyonun iptal edilecek, emin misin?"</string>
    <string name="pgLogin_sureExit">"Hayır, hayır önce sen kapat"</string>
    <string name="pgLogin_lblHeader">"Giriş"</string>
    <string name="pgLogin_lblInfo">", içeri buyurmaz mısın?"</string>
    <string name="pgLogin_CopyoflblInfo">"Lütfen şifreni gir"</string>
    <string name="pgLogin_btnNotme">"Bu ben değilim"</string>
    <string name="pgLogin_btnForgetPass">"Şifremi unuttum"</string>
    <string name="pgTelephoneSelection_info_message">"SMS şifresinin gönderilmesini istediğiniz cep telefonu numaranızı seçiniz."</string>
    <string name="pgTelephoneSelection_btnSend">"GÖNDER"</string>
    <string name="dlgChooseBranch_titleHeader">"Şube Seçimi"</string>
    <string name="city">"İl"</string>
    <string name="town">"İlçe"</string>
    <string name="branch">"Şube"</string>
    <string name="pgNonCustomerBranchSelection_info">Herhangi bir sorunla karşılaştığın zaman, duruma acil müdahale etmesini istediğin şubeyi seç</string>
    <string name="pgNonCustomerBranchSelection_btnNext">"Devam"</string>
    <string name="im_map_km">km</string>
    <string name="im_map_appointment">Randevu Al</string>
    <string name="im_map_direction">Yol Tarifi Al</string>
    <string name="pgMapDetail_atmInformation">ATM Bilgisi</string>
    <string name="pgMapDetail_atm">ATM</string>
    <string name="pgMapDetail_lblAdres">Adres</string>
    <string name="detail_distance">Sana Olan Yaklaşık Mesafesi</string>
    <string name="pgMapDetail_callBranchMessage">Uygulamadan çıkılıp seçtiğiniz şubenin telefon numarası aranacaktır. Devam etmek istiyor musunuz?</string>
    <string name="pgMapDetail_qrCode">Randevu Al</string>
    <string name="pgMapDetail_branchInformation">Şube Bilgisi</string>
    <string name="pgMapDetail_safeStatus">Kiralık Kasa Durumu</string>
    <string name="pgMapDetail_branch">Şube</string>
    <string name="pgMapDetail_safeStatusTrue">Mevcut</string>
    <string name="pgMapDetail_safeStatusFalse">Mevcut Değil</string>
    <string name="pgMapDetail_lblTelefon">Telefon Numarası</string>
    <string name="locationProgress">Konumun bulunuyor...</string>
    <string name="directionProgress">Rota hesaplanıyor...</string>
    <string name="pgMap_lblHeader">ATM / Şube Bulucu</string>
    <string name="pgMap_Label1">Hepsi</string>
    <string name="pgMap_Label2">Şube</string>
    <string name="pgMap_Label3">ATM</string>
    <string name="pgMap_approximateDistance">Yaklaşık Mesafen </string>
    <string name="pgMap_edtSearchPlaceHolder">Adres, Şehir veya Şube adı</string>
    <string name="pgMap_locationNotFound">"Konumunu bulamadık, telefon ayarlarını bir kontrol eder misin?"</string>
    <string name="pgMap_open_location_settings">"Konum Ayarları"</string>
    <string name="pgDashboard_lblInfoCaseAmount">"Toplam Kullanılabilir Bakiye:"</string>
    <string name="pgDashboard_Label111">"Kartlarını ParaMara'da kullanmak için aktifleştirmelisin. Çok basit üstlerine tıkla yeter."</string>
    <string name="pgDashboard_lblBalanceBanner">"Kullanılabilir Bakiye"</string>
    <string name="pgDashboard_lblInfoCaseNoCard">"Ayrıcalıklardan faydalanmak için hemen başvursana."</string>
    <string name="pgDashboard_lblCreateIninalCard">"ininal Kart Yarat"</string>
    <string name="pgDashboard_lblAddIninalCard">"Kart Ekle"</string>
    <string name="pgDashboard_lblApplyToIngCard">"ING Kartım Olsun"</string>
    <string name="pgDashboard_lblCardList">"Kredi\nKartlarım"</string>
    <string name="pgDashboard_lblPayDebt">"Borç\nÖdeme"</string>
    <string name="pgDashboard_lblNakitAvans">"Nakit\nAvans"</string>
    <string name="pgDashboard_lblTransfer">"Havale/\nEFT"</string>
    <string name="pgDashboard_lblApplyCard">"Kredi Kartı\nBaşvuruları"</string>
    <string name="pgIninalApplyToCard_lblHelpText">"Başvurmak istediğin ininal Alışveriş Kartını seçer misin?"</string>
    <string name="pgIninalApplyToCard_lblNavBar">"ininal Alışveriş Kartları"</string>
    <string name="pgIninalApplyToCard_btnWhatisIninalCard">"ininal Kart Nedir?"</string>
    <string name="typeFaceRegular">regular</string>
    <string name="demo1">Demo 1</string>
    <string name="demo2">Demo 2</string>
    <string name="demo3">Demo 3</string>
</resources>