<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/pm_PageStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#fff"
    android:weightSum="3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Happy BankING"
        android:id="@+id/textView"
        android:typeface="monospace"
        android:textSize="30dp"
        android:layout_marginBottom="50dp"
        android:textColor="#444" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btnDemo1"
            style="@style/pm_ButtonStyle_Content_Level1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo1"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btnDemo2"
            style="@style/pm_ButtonStyle_Content_Level1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo2"
            android:typeface="monospace" />
        <Button
            android:id="@+id/btnDemo3"
            style="@style/pm_ButtonStyle_Content_Level1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo3"
            android:typeface="monospace" />
    </LinearLayout>
</LinearLayout>
